# pretix-dob-validation

./: .update-locales.sh  Makefile  README.rst  pyproject.toml  setup.cfg
.github/workflows/: style.yml  tests.yml
pretix_dob_validation/: apps.py
